# permgroup

./: README.md  dune-project  perm.ml  perm.mli  permgroup.ml  permgroup.mli  permgroup.obuild  permgroup.opam  permtools.ml  schreierSims.ml  schreierSims.mli  tests.ml  tools.ml  tools.mli
lib/: dune  group.ml  group.mli  jbuild  perm.ml  perm.mli  permgroup.ml  permtools.ml
test/: dune  jbuild  tests.ml
